--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #sliders {
-  height: 400px;
+  height: 500px;
   width: 60%;
   overflow: hidden;
   margin: 0 auto;
@@ -36,7 +36,8 @@ img {
   cursor: pointer;
 }
 
-.prev, .next {
+.prev,
+.next {
   background-color: transparent;
   padding: 8px 10px;
   color: #fff;
